force-app/main/default/objects/Account/fields/Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Status__c</fullName>
    <description>Result of the most recent completed inspection. Maintained by InspectionTriggerHandler.</description>
    <label>Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inspection_Status</valueSetName>
    </valueSet>
</CustomField>