force-app/main/default/objects/Account/fields/Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection_Date__c</fullName>
    <description>Completed date of the most recent inspection. Maintained by InspectionTriggerHandler.</description>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>