force-app/main/default/objects/Account/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>State facility license number. Used as the upsert key for data loads.</description>
    <externalId>true</externalId>
    <label>License Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>