force-app/main/default/objects/Account/fields/Next_Inspection_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection_Due__c</fullName>
    <description>Scheduled date of the next open inspection, or last inspection + 365 days. Maintained by InspectionTriggerHandler.</description>
    <label>Next Inspection Due</label>
    <type>Date</type>
</CustomField>