force-app/main/default/objects/Account/fields/Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status__c</fullName>
    <description>Status shown to the public: Overdue when the next inspection due date has passed, otherwise the latest inspection result.</description>
    <formula>IF(AND(NOT(ISBLANK(Next_Inspection_Due__c)), Next_Inspection_Due__c &lt; TODAY()), "Overdue", IF(ISPICKVAL(Inspection_Status__c, ""), "Not Yet Inspected", TEXT(Inspection_Status__c)))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Portal Status</label>
    <type>Text</type>
</CustomField>