force-app/main/default/objects/Account/fields/Publicly_Listed__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Listed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the facility is visible on the public inspection portal (drives the guest sharing rule).</description>
    <inlineHelpText>Uncheck to hide this facility from the public portal.</inlineHelpText>
    <label>Publicly Listed</label>
    <type>Checkbox</type>
</CustomField>