force-app/main/default/objects/Account/recordTypes/Medical_Facility.recordType-meta.xml
<RecordType>
    <fullName>Medical_Facility</fullName>
    <active>true</active>
    <description>A licensed medical facility that receives yearly inspections.</description>
    <label>Medical Facility</label>
</RecordType>